# demo

./: makefile
backend/: alembic.ini  docker-compose.dev.yml  dockerfile  pyproject.toml
backend/src/: config.py  conftest.py  containers.py  dependencies.py  main.py
backend/src/seedwork/domain/: validators.py  value_objects.py
backend/src/seedwork/infra/container/: provider.py
backend/src/seedwork/infra/db/: mapper.py  repositories.py  utils.py
backend/src/seedwork/infra/db/migrations/: env.py
backend/src/seedwork/infra/db/migrations/versions/: 0fa992852268_.py  42ba3b3cce9d_.py  42e4dce7c6a0_.py  661a6d2ac741_.py  9667553a5f42_.py  c45a6fbfc923_.py  d3075a6fd567_.py  (+2 more)
backend/src/seedwork/infra/memory/: repositories.py
backend/src/seedwork/tests/infra/: test_repository.py  test_sqlalchemy_repository.py
backend/src/tasks/application/: __init__.py  exceptions.py
backend/src/tasks/application/command/: __init__.py  create_task.py  delete_task.py  update_task.py
backend/src/tasks/application/query/: __init__.py  get_task.py  get_tasks.py  model_mappers.py
backend/src/tasks/domain/: entities.py  exceptions.py  repositories.py  value_objects.py
backend/src/tasks/infra/: repositories.py
backend/src/tasks/presentation/: api.py  schemas.py
backend/src/tasks/tests/application/: conftest.py  test_create_task.py  test_delete_task.py  test_get_task.py  test_get_tasks.py  test_update_task.py
backend/src/tasks/tests/presentation/: test_api.py
backend/src/teachers/application/: __init__.py  exceptions.py
backend/src/teachers/application/command/: __init__.py  create_teacher.py
backend/src/teachers/application/query/: __init__.py  get_teacher.py  get_teachers.py  map_teacher_to_dao.py
backend/src/teachers/domain/: entities.py  repositories.py  value_objects.py
backend/src/teachers/infra/: repositories.py
backend/src/teachers/presentation/: api.py
backend/src/teachers/tests/application/: conftest.py  test_create_teacher.py
backend/src/teachers/tests/domain/: test_value_objects.py
(+111 files in other folders)
